Fix alignment of git repo icons

--- a/_assets/sass/pages/_projects.sass
+++ b/_assets/sass/pages/_projects.sass
@@ -77,6 +77,10 @@
       margin-right: $baseline
 
     &__icon
+      align-items: center
       color: $color-red
+      display: flex
       margin-right: #{($baseline / 4)}
 
+      svg
+        height: #{$baseline / 1.5}
